--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,6 +29,18 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
+file.reference.commons-codec-1.9.jar=C:\\Users\\Ethan\\Desktop\\httpcomponents-client-4.5-bin\\httpcomponents-client-4.5\\lib\\commons-codec-1.9.jar
+file.reference.commons-logging-1.2.jar=C:\\Users\\Ethan\\Desktop\\httpcomponents-client-4.5-bin\\httpcomponents-client-4.5\\lib\\commons-logging-1.2.jar
+file.reference.fluent-hc-4.5.jar=C:\\Users\\Ethan\\Desktop\\httpcomponents-client-4.5-bin\\httpcomponents-client-4.5\\lib\\fluent-hc-4.5.jar
+file.reference.gson-2.3.1.jar=C:\\Users\\Ethan\\Desktop\\gson-2.3.1.jar
+file.reference.httpclient-4.5.jar=C:\\Users\\Ethan\\Desktop\\httpcomponents-client-4.5-bin\\httpcomponents-client-4.5\\lib\\httpclient-4.5.jar
+file.reference.httpclient-cache-4.5.jar=C:\\Users\\Ethan\\Desktop\\httpcomponents-client-4.5-bin\\httpcomponents-client-4.5\\lib\\httpclient-cache-4.5.jar
+file.reference.httpclient-win-4.5.jar=C:\\Users\\Ethan\\Desktop\\httpcomponents-client-4.5-bin\\httpcomponents-client-4.5\\lib\\httpclient-win-4.5.jar
+file.reference.httpcomponents-client-4.5-bin.zip=C:\\Users\\Ethan\\Desktop\\httpcomponents-client-4.5-bin.zip
+file.reference.httpcore-4.4.1.jar=C:\\Users\\Ethan\\Desktop\\httpcomponents-client-4.5-bin\\httpcomponents-client-4.5\\lib\\httpcore-4.4.1.jar
+file.reference.httpmime-4.5.jar=C:\\Users\\Ethan\\Desktop\\httpcomponents-client-4.5-bin\\httpcomponents-client-4.5\\lib\\httpmime-4.5.jar
+file.reference.jna-4.1.0.jar=C:\\Users\\Ethan\\Desktop\\httpcomponents-client-4.5-bin\\httpcomponents-client-4.5\\lib\\jna-4.1.0.jar
+file.reference.jna-platform-4.1.0.jar=C:\\Users\\Ethan\\Desktop\\httpcomponents-client-4.5-bin\\httpcomponents-client-4.5\\lib\\jna-platform-4.1.0.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -42,7 +54,19 @@ j2ee.platform.wsimport.classpath=${j2ee.server.home}/modules/webservices-osgi.ja
 j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.gson-2.3.1.jar}:\
+    ${file.reference.httpcomponents-client-4.5-bin.zip}:\
+    ${file.reference.commons-codec-1.9.jar}:\
+    ${file.reference.commons-logging-1.2.jar}:\
+    ${file.reference.fluent-hc-4.5.jar}:\
+    ${file.reference.httpclient-4.5.jar}:\
+    ${file.reference.httpclient-cache-4.5.jar}:\
+    ${file.reference.httpclient-win-4.5.jar}:\
+    ${file.reference.httpcore-4.4.1.jar}:\
+    ${file.reference.httpmime-4.5.jar}:\
+    ${file.reference.jna-4.1.0.jar}:\
+    ${file.reference.jna-platform-4.1.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
